--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,9 @@ body{
 input:focus{
     outline: none;
 }
+main, footer, #index-page{
+    display:none;
+}
 
 /* General font styling (check figma file for notes on how to use!) */
 h1,h2,h3{
@@ -139,7 +142,7 @@ nav a{
 
 /* footer */
 footer{
-    display: flex;
+    display: none;
     height: 80px;
     width: 100%;
     justify-content: center;
@@ -186,6 +189,9 @@ footer{
 
 
 /* BROWSE ALL COCKTAILS PAGE  */
+.browse-page{
+    flex-direction: column;
+}
 
 .browse-page h2{
     text-align: center; 
@@ -219,3 +225,90 @@ footer{
      color: var(--accent-yellow);
      background: transparent;
  }
+
+
+ /* loading screen */
+ #loading-screen{
+    height: calc(100vh - 80px);
+ }
+
+ .ring
+{
+  position:absolute;
+  top:50%;
+  left:50%;
+  transform:translate(-50%,-50%);
+  width:200px;
+  height:200px;
+  background:transparent;
+  border:3px solid #3c3c3c;
+  border-radius:50%;
+  text-align:center;
+  line-height:200px;
+  font-family: 'Bungee Inline', cursive;
+  font-size:24px;
+  color:var(--accent-yellow);
+  letter-spacing:4px;
+  text-transform:uppercase;
+
+}
+.ring:before
+{
+  content:'';
+  position:absolute;
+  top:-3px;
+  left:-3px;
+  width:100%;
+  height:100%;
+  border:5px solid transparent;
+  border-top:3px solid var(--accent-yellow);
+  border-right:3px solid var(--accent-yellow);
+  border-radius:50%;
+  animation:animateC 2s linear infinite;
+}
+span
+{
+  display:block;
+  position:absolute;
+  top:calc(50% - 2px);
+  left:50%;
+  width:50%;
+  height:4px;
+  background:transparent;
+  transform-origin:left;
+  animation:animate 2s linear infinite;
+}
+span:before
+{
+  content:'';
+  position:absolute;
+  width:16px;
+  height:16px;
+  border-radius:50%;
+  background:var(--accent-yellow);
+  top:-6px;
+  right:-8px;
+  box-shadow:0 0 20px var(--accent-yellow);
+}
+@keyframes animateC
+{
+  0%
+  {
+    transform:rotate(0deg);
+  }
+  100%
+  {
+    transform:rotate(360deg);
+  }
+}
+@keyframes animate
+{
+  0%
+  {
+    transform:rotate(45deg);
+  }
+  100%
+  {
+    transform:rotate(405deg);
+  }
+}
