Added search & predictive search feature

--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,10 @@ strong {
     font-size: 12px;
 }
 
+input {
+    text-transform: uppercase;
+}
+
 /*-- HEADER -- */
 header {
     height: 80px;
@@ -97,6 +101,21 @@ nav a {
     border-radius: 40px;
     padding: 16px 12px 10px 12px;
     position: relative;
+    z-index: 2;
+}
+
+.search-container {
+    position: absolute;
+    right: 0;
+}
+
+.main-search-container {
+    width: 100%;
+    position: relative;
+}
+
+.main-container {
+    width: 100%;
 }
 
 .nav-search-bar {
@@ -107,8 +126,6 @@ nav a {
     justify-content: flex-end;
     width: 27.4px;
     overflow: hidden;
-    position: absolute;
-    right: 0;
     height: auto;
 }
 
@@ -121,14 +138,14 @@ nav a {
     right: -3px;
     top: 0;
     transition: width .4s ease-in-out;
-    pointer-events: none
+    pointer-events: none;
 }
 
 .search-bar:hover .decorative-search-border {
     width: 100%;
 }
 
-.nav-search-bar:hover {
+.search-container:hover .nav-search-bar{
     width: 400px;
 }
 
@@ -162,6 +179,57 @@ nav a {
 
 .nav-search-bar button img {
     height: 20px;
+}
+
+#predictive-search-results {
+    background-color: var(--secondary-color);
+    position: absolute;
+    width: 100%;
+    overflow: hidden;
+    padding: 0 0 0 0;
+    top:calc(47.93px / 2);
+    border-radius: 0 0 20px 20px;
+    max-height:0;
+    transition: all .4s ease-in-out;
+    display: none;
+}
+
+#main-predictive-search-results {
+    background-color: var(--secondary-color);
+    position: absolute;
+    width: 100%;
+    overflow: hidden;
+    padding: 0 0 0 0;
+    top:40px;
+    border-radius: 0 0 20px 20px;
+    max-height:0;
+    transition: all .4s ease-in-out;
+    display: none;
+}
+
+.predictive-search-item {
+    margin: 0;
+    padding: 5px 40px;
+    background-color: var(--secondary-color);
+    transition: all .1s ease-in-out;
+}
+
+.predictive-search-item:hover {
+    margin: 0;
+    padding: 5px 40px;
+    background-color: var(--accent);
+    color: var(--primary-color);
+    cursor: pointer;
+}
+
+.search-container:hover #predictive-search-results{
+    padding: 30px 0 15px 0;
+    max-height:422px;
+}
+
+.main-search-container:hover #main-predictive-search-results{
+    padding: 55px 0 15px 0;
+    max-height:422px;
 }
 
 /* -- FOOTER -- */
@@ -303,7 +371,7 @@ footer {
     height: calc(100vh - 80px);
     position: absolute;
     top: 80px;
-    z-index: 2;
+    z-index: 3;
     background-color: var(--primary-color);
 }
 
