--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,8 @@ input:focus {
 
 h1,
 h2,
-h3 {
+h3,
+h4 {
     font-family: 'Bungee Inline', cursive;
     color: var(--accent);
 }
@@ -28,7 +29,8 @@ h1 {
 }
 
 h2 {
-    font-size: 36px;
+    /* font-size: 36px; */
+    font-size: 24px;
 }
 
 h3 {
@@ -154,7 +156,7 @@ nav a {
     width: 100%;
 }
 
-.search-container:hover .nav-search-bar{
+.search-container:hover .nav-search-bar {
     width: 400px;
 }
 
@@ -196,9 +198,9 @@ nav a {
     width: 100%;
     overflow: hidden;
     padding: 0 0 0 0;
-    top:calc(47.93px / 2);
+    top: calc(47.93px / 2);
     border-radius: 0 0 20px 20px;
-    max-height:0;
+    max-height: 0;
     transition: all .4s ease-in-out;
     display: none;
 }
@@ -209,9 +211,9 @@ nav a {
     width: 100%;
     overflow: hidden;
     padding: 0 0 0 0;
-    top:40px;
+    top: 40px;
     border-radius: 0 0 20px 20px;
-    max-height:0;
+    max-height: 0;
     transition: all .4s ease-in-out;
     display: none;
 }
@@ -231,14 +233,14 @@ nav a {
     cursor: pointer;
 }
 
-.search-container:hover #predictive-search-results{
+.search-container:hover #predictive-search-results {
     padding: 30px 0 15px 0;
-    max-height:422px;
+    max-height: 422px;
 }
 
-.main-search-container:hover #main-predictive-search-results{
+.main-search-container:hover #main-predictive-search-results {
     padding: 55px 0 15px 0;
-    max-height:422px;
+    max-height: 422px;
 }
 
 /* -- FOOTER -- */
@@ -475,14 +477,18 @@ main {
     text-align: center;
 }
 
-.content-wrapper main {}
-
-main {
+main h2 {
+    text-align: center;
     color: lime;
+}
+
+main p {
+    color: var(--accent);
 }
 
 .content-wrapper h2 {
     text-align: center;
+    padding: 0 90px;
 }
 
 /* -- About Page -- */
