--- a/css/style.css
+++ b/css/style.css
@@ -314,7 +314,6 @@ footer {
     gap: 90px;
 }
 
-
 .select-ingredients-container {
     display: flex;
     flex-direction: column;
@@ -488,8 +487,8 @@ main p {
     display: flex;
     /* vvvv MOBILE: column */
     /* flex-direction: column; */
-    justify-content: space-around;
-    padding-top: 30px;
+    justify-content: space-between;
+    padding-top: 60px;
 }
 
 /* team cards */
@@ -497,6 +496,7 @@ main p {
     background-color: var(--accent);
     width: 250px;
     max-height: 400px;
+    border-radius: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -505,18 +505,31 @@ main p {
 
 .team-card img {
     width: 230px;
-    height: 230px;
-    border-radius: 10px;
+    min-height: 230px;
+    border-radius: 115px;
     margin: 0;
     padding: 0;
+    position: relative;
+    bottom: 90px;
+    border: solid 4px var(--primary-color);
     /* vvvvv----NOT SURE IF NEEDED YET */
-    /* object-fit:cover; */
+    /* object-fit:fill; */
     /* overflow: hidden; */
 }
+
+.team-card { margin: 10px;}
 
 .team-card h3,
 p {
     color: var(--primary-color);
+    margin: 0;
+    padding: 0;
+
+}
+
+.team-card h3 {
+    margin-top: -60px;
+    margin-bottom: 30px;
 }
 
 .team-card p {
