--- a/css/style.css
+++ b/css/style.css
@@ -88,7 +88,7 @@ nav {
     display: flex;
     align-items: center;
     gap: 30px;
-    position: relative
+    position: relative;
 }
 
 nav a {
@@ -97,7 +97,7 @@ nav a {
 
 #random-cocktail-nav-btn {
     cursor: pointer;
-    margin-right: 78.73px;
+    margin-right: 78.73px; /* may be causing issues with spacing between icon and navbar items */
 }
 
 /* -- SEARCH BARS -- */
@@ -363,9 +363,6 @@ footer {
 
  /* FILTER RESULTS */
 
-
-
-
 .filter-display {
     width: calc(100% - 180px);
     margin: auto;
@@ -463,7 +460,6 @@ footer {
 .ingredient-container:hover p{
     color: var(--primary-color);
 }
-
 
 .ingredient-container p{
     font-size: 12px;
@@ -640,7 +636,7 @@ main p {
     position: relative;
     bottom: 90px;
     border: solid 4px var(--primary-color);
-    /* vvvvv----NOT SURE IF NEEDED YET */
+                                /* vvvvv----NOT SURE IF NEEDED YET */
     /* object-fit:fill; */
     /* overflow: hidden; */
 }
@@ -649,8 +645,7 @@ main p {
     margin: 10px;
 }
 
-.team-card h3,
-p {
+.team-card h3, .team-card p {
     color: var(--primary-color);
     margin: 0;
     padding: 0;
