--- a/css/style.css
+++ b/css/style.css
@@ -635,8 +635,8 @@ main p {
     padding: 0;
     position: relative;
     bottom: 90px;
-    border: solid 4px var(--primary-color);
-                                /* vvvvv----NOT SURE IF NEEDED YET */
+    border: solid 2px var(--primary-color);
+                            /* vvvvv----NOT SURE IF NEEDED YET */
     /* object-fit:fill; */
     /* overflow: hidden; */
 }
@@ -649,17 +649,17 @@ main p {
     color: var(--primary-color);
     margin: 0;
     padding: 0;
-
 }
 
 .team-card h3 {
     margin-top: -60px;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
 }
 
 .team-card p {
     /* vvvv can delete if matches root size */
     font-size: 16px;
+    margin-bottom: 20px;
 }
 
 .team-card a {}
@@ -670,7 +670,7 @@ main p {
     width: 200px;
     border-style: none;
     border-radius: 10px;
-    padding: 10px 20px 10px 20px;
+    padding: 10px 20px;
     font-size: 20px;
 }
 
@@ -726,8 +726,6 @@ main p {
     cursor: pointer;
 }
 
-/* DETAILS PAGE STYLING */
-
 .current-image{
     display: flex;
     margin: 50px 50px;
@@ -753,7 +751,6 @@ main p {
 
 .ingredients{
     padding-bottom: 40px;
-
 }
 
 #list-of-ingredients{
